monitoring/kibana/kibana.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deployment
  namespace: monitoring
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.10.1
          ports:
            - containerPort: 5601
              name: ui
              protocol: TCP
